add new api definition
