# pkg/apigateway/spec/api.swagger.json
@@ -510,6 +510,60 @@
         ]
       }
     },
+    "/v1/notifications/get_email_server_config": {
+      "post": {
+        "summary": "get Email Server configration",
+        "operationId": "getEmailServerConfig",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbEmailServerConfig"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/pbgetEmailServerConfigRequest"
+            }
+          }
+        ],
+        "tags": [
+          "notification"
+        ]
+      }
+    },
+    "/v1/notifications/set_email_server_config": {
+      "post": {
+        "summary": "Set Email Server configration",
+        "operationId": "SetEmailServerConfig",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbSetEmailServerConfigResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/pbEmailServerConfig"
+            }
+          }
+        ],
+        "tags": [
+          "notification"
+        ]
+      }
+    },
     "/v1/notifications/tasks": {
       "get": {
         "summary": "describe tasks",
@@ -939,6 +993,29 @@
         }
       }
     },
+    "pbEmailServerConfig": {
+      "type": "object",
+      "properties": {
+        "protocol": {
+          "type": "string"
+        },
+        "server_name": {
+          "type": "string"
+        },
+        "smtp_port": {
+          "type": "string"
+        },
+        "sender_address": {
+          "type": "string"
+        },
+        "server_user": {
+          "type": "string"
+        },
+        "server_password": {
+          "type": "string"
+        }
+      }
+    },
     "pbModifyAddressListRequest": {
       "type": "object",
       "properties": {
@@ -1077,6 +1154,15 @@
         }
       }
     },
+    "pbSetEmailServerConfigResponse": {
+      "type": "object",
+      "properties": {
+        "is_succ": {
+          "type": "boolean",
+          "format": "boolean"
+        }
+      }
+    },
     "pbTask": {
       "type": "object",
       "properties": {
@@ -1108,6 +1194,9 @@
           "type": "string"
         }
       }
+    },
+    "pbgetEmailServerConfigRequest": {
+      "type": "object"
     }
   },
   "securityDefinitions": {
